[gd_scene format=3 uid="uid://drmuo8xish18e"]

[ext_resource type="Texture2D" uid="uid://d0vy7luo66t8i" path="res://assets/character_with_helmet (1).png" id="1_bdwhi"]
[ext_resource type="Script" uid="uid://b3x6kfeu6n5rl" path="res://scenes+scripts/player.gd" id="1_fvbna"]
[ext_resource type="Resource" uid="uid://5r82vhq0prcw" path="res://inventory/inventory_objects/player_equipment.tres" id="2_3jwj1"]
[ext_resource type="Script" uid="uid://c27swvs3632j8" path="res://scenes+scripts/damage_input_calculation.gd" id="2_dmgin"]
[ext_resource type="Script" uid="uid://cbym0gjwptcse" path="res://scenes+scripts/damage_output_calculation.gd" id="2_dmgout"]
[ext_resource type="Script" uid="uid://m2fk1gug4cwm" path="res://scenes+scripts/floating_damage.gd" id="2_float"]
[ext_resource type="FontFile" uid="uid://dkj3g3l3f506c" path="res://Pix32.ttf" id="5_tuyoq"]
[ext_resource type="PackedScene" uid="uid://cyyqmtvs3mq7s" path="res://scenes+scripts/player_UI.tscn" id="8_i6uj8"]

[sub_resource type="LabelSettings" id="LabelSettings_fjrip"]
font = ExtResource("5_tuyoq")
font_color = Color(1, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_ab6rm"]
length = 3.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.30000007, 0.39999998, 0.5, 0.5909475),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 7, 12, 3, 2, 1]
}

[sub_resource type="Animation" id="Animation_wuerr"]
resource_name = "attack"
length = 1.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fvbna"]
_data = {
&"RESET": SubResource("Animation_ab6rm"),
&"attack": SubResource("Animation_wuerr")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jq62g"]
atlas = ExtResource("1_bdwhi")

[node name="Warrior" type="Node2D" unique_id=975356768 node_paths=PackedStringArray("player_ui")]
y_sort_enabled = true
script = ExtResource("1_fvbna")
player_ui = NodePath("player_ui")
equipment = ExtResource("2_3jwj1")

[node name="DamageOutputCalculation" type="Node" parent="." unique_id=328693285]
script = ExtResource("2_dmgout")

[node name="DamageInputCalculation" type="Node" parent="." unique_id=486238581]
script = ExtResource("2_dmgin")

[node name="player_visuals" type="Node2D" parent="." unique_id=1094320092]

[node name="FloatingDamage" type="Node2D" parent="player_visuals" unique_id=1337253245]
position = Vector2(-28, -59)
script = ExtResource("2_float")

[node name="LabelTemplate" type="Label" parent="player_visuals/FloatingDamage" unique_id=1985340055]
visible = false
offset_left = -30.0
offset_top = -8.0
offset_right = 30.0
offset_bottom = 8.0
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "0"
label_settings = SubResource("LabelSettings_fjrip")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="player_visuals" unique_id=1549973669]
root_node = NodePath("../Sprite2D")
libraries/ = SubResource("AnimationLibrary_fvbna")

[node name="Sprite2D" type="Sprite2D" parent="player_visuals" unique_id=286062386]
position = Vector2(3, -27)
texture = SubResource("AtlasTexture_jq62g")
hframes = 25

[node name="player_ui" parent="." unique_id=639162712 instance=ExtResource("8_i6uj8")]
z_index = 6
